# BEC_software

./: BackEnd.py  CMakeLists.txt  Detection.C  Detection.h  GUI.py  README.md  RUN  config.py  makeroot.C
bulid/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
